--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/frankandoak/object-etl/issues"
   },
-  "homepage": "https://github.com/frankandoak/object-etl#readme"
+  "homepage": "https://github.com/frankandoak/object-etl#readme",
+  "dependencies": {
+    "amqplib": "^0.5.1",
+    "async": "^2.5.0",
+    "debug": "^3.1.0",
+    "glob": "^7.1.2",
+    "memory-cache": "^0.2.0"
+  }
 }
